Add maybe/probably correct A* pathfinding